syntax = "proto3";

option go_package = "github.com/sof2ia/PaymentSystem/user/protobuf/user";

package user;

import "google/protobuf/empty.proto";



service UserService{
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
  rpc CreatePixKey(CreatePixKeyRequest) returns (CreatePixKeyResponse);
  rpc GetPixKey(GetPixKeyRequest) returns (GetPixKeyResponse);
  rpc DeletePixKey(DeletePixKeyRequest) returns (google.protobuf.Empty);
}

message CreatePixKeyRequest {
  string user_id = 1;
  string key_type = 2;
  string key_value = 3;
}

message CreatePixKeyResponse {
  string key_id = 1;
}

message GetPixKeyRequest {
  string key_value = 1;
}

message GetPixKeyResponse{
  string user_id = 1;
  string name = 2;
  string cpf = 3;
  string key_id = 4;
  string key_value = 5;
}

message DeletePixKeyRequest{
  string key_value = 1;
}


message CreateUserRequest {
  string name = 1;
  int32 age = 2;
  string phone = 3;
  string email = 4;
  string cpf = 5;
}

message CreateUserResponse {
  string user_id = 1;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string name = 1;
  int32 age = 2;
  string phone = 3;
  string email = 4;
  string cpf = 5;
  double balance = 6;
}

message UpdateUserRequest {
  string user_id = 1;
  string name = 2;
  int32 age = 3;
  string phone = 4;
  string email = 5;
  string cpf = 6;
}

message UpdateUserResponse {
  string user_id = 1;
  string name = 2;
  int32 age = 3;
  string phone = 4;
  string email = 5;
  string cpf = 6;
}

message DeleteUserRequest{
  string user_id = 1;
}